# flipnote.py

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/flipnote/: __init__.py  _native.py  flipnote.py  kwz.py  ppm.py  schema.py  verify.py
src/flipnote/kwz/: kwz.py
