[metadata]
name = flipnote
version = 0.0.2
author = Meemo
author_email = meemo4556@gmail.com
description = A Python library for Flipnote Studio (3D) files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meemo/flipnote.py
project_urls =
    Bug Tracker = https://github.com/meemo/flipnote.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
